# knowledge-os

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
backend/: .dockerignore  .env.example  AGENTS.md  alembic.ini  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 529159d4d546_add_content_artifacts.py  5ccd309c2a94_add_digest_schema.py  b53116d551c5_initial_schema.py  c8a2f1e94b3d_rename_sources_to_subscriptions.py
backend/app/: config.py  main.py
backend/app/agents/: __init__.py  client.py  factory.py  openai.py
backend/app/alembic/: env.py
backend/app/api/: auth.py  deps.py  schemas.py
backend/app/api/routes/: auth.py  items.py  subscriptions.py
backend/app/database/: session.py
backend/app/database/models/: __init__.py  content_artifact.py  content_body.py  content_item.py  enums.py  source.py  subscription.py  user_interest_profile.py
backend/app/ingest/: runner.py
backend/app/ingest/adapters/: youtube.py
backend/app/ingest/jobs/: sync_all.py  sync_subscription.py  upsert_subscription.py
backend/app/ingest/operations/: content.py  (+1 more)
backend/app/processing/: digest.py  runner.py  sampling.py
backend/scripts/: hash_password.py  ingest_initial_youtube.py  probe_digest.py  probe_youtube_channel.py  run_enrichment.py  seed_interest_profile.py  seed_subscriptions.py  sync_youtube.py
backend/tests/: conftest.py
backend/tests/api/: test_auth.py
backend/tests/ingest/: test_jobs_sync_subscription.py  test_jobs_upsert_subscription.py  test_operations_content.py  test_operations_subscriptions.py  test_youtube_adapter.py
(+33 files in other folders)
