[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knowledge-os-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "fastapi>=0.138.0",
    "feedparser>=6.0.12",
    "greenlet>=3.3.2",
    "openai>=2.43.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.11.0",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.49.0",
    "youtube-transcript-api>=1.2.4",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tools.uv]
add-bounds = "exact"
exclude-newer = "7 days"

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require network or database",
]



